# reliq-context-engine

./: .gitignore  .mcp.json  README.md  mcp.json.example  pyproject.toml  requirements.txt
.codex-plugin/: plugin.json
examples/: benchmark_tasks.json  sample_task.json
skills/reliq-cognition/: SKILL.md
skills/reliq-cognition/references/: local-tooling.md  reliq-architecture.md
src/reliq_context_engine/: __init__.py  api.py  benchmark.py  cli.py  cognition.py  context_engine.py  evolution.py  mcp_server.py  memory_extractor.py  memory_integration.py  memory_manager.py  memory_retriever.py  memory_store.py  models.py  plugin_interface.py  prompt_builder.py  retriever.py
src/reliq_context_engine/dashboard/: __init__.py  status.py
src/reliq_context_engine/research/: __init__.py  swarm.py
src/reliq_context_engine/resources/: __init__.py  scheduler.py
tests/: test_context_engine.py  test_swarm_scheduler.py
